syntax = "proto3";

package pb;

import "google/api/annotations.proto";
import "rpc_create_user.proto";
import "rpc_login_user.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option go_package = "github.com/mkdtemplar/simplebank-new/pb";

option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  info: {
    title: "Simple Bank API";
    version: "1.1";
    contact: {
      name: "Ivan gRPC-Gateway project";
      url: "https://github.com/mkdtemplar/simplebank-new";
      email: "sagitariusim@gmail.com";
    };
  };
};

service SimpleBank {
  rpc CreateUser (CreateUserRequest) returns (CreateUserResponse) {
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      description: "Use thi API to create new user";
      summary: "Summary: Create new user";
    };
    option (google.api.http) = {
      post: "/v1/create_user"
      body: "*"
    };
  }
  rpc LoginUser (LoginUserRequest) returns (LoginUserResponse) {
    option (google.api.http) = {
      post: "/v1/login_user"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      description: "Use thi API to login user & get access token & refresh token";
      summary: "Summary: Login user";
    };
  }
}